--- a/intro-web-3/ejercicios/index.html
+++ b/intro-web-3/ejercicios/index.html
@@ -16,10 +16,12 @@
     </p>
     
     <p>Elije tu calabaza</p>
-    <s>
+    <article>
     <img class="cal3" src="/Img/dynia-halloween-w3.jpg" href=""  >
     <img class="cal4" src="/Img/dynia-halloween-w4.jpg" href="" >
-    </s>
+    <img class="cal5" src="/Img/dynia-halloween-w4.jpg" href="" >
+    </article>
+    <span>color</span>
 </div>
 </body>
 </html>
