--- a/bootstrap-ejercicio/index.html
+++ b/bootstrap-ejercicio/index.html
@@ -96,7 +96,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
 
           <div class="col">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://i.pinimg.com/564x/1d/46/5e/1d465e140e179041471efa5c8c979b7a.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -106,7 +106,7 @@
           </div>
 
           <div class="col">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://img.freepik.com/vector-gratis/lindo-pinguino-pie-cartoon-vector-icono-ilustracion-animal-naturaleza-icono-concepto-aislado-premium_138676-4656.jpg?w=2000" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -116,7 +116,7 @@
           </div>
 
           <div class="col">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://img.freepik.com/vector-gratis/lindo-pinguino-cana-pescar-dibujos-animados-vector-icono-ilustracion-animal-naturaleza-icono-concepto-aislado_138676-5361.jpg?w=2000" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -126,7 +126,7 @@
           </div>
 
           <div class="col">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://img.freepik.com/vector-gratis/ilustracion-dibujos-animados-pesca-pinguino-lindo_138676-3258.jpg?w=2000" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -136,7 +136,7 @@
           </div>
 
           <div class="col">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://img.freepik.com/vector-gratis/ejemplo-lindo-historieta-juego-pinguino_138676-2741.jpg?w=2000" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -146,7 +146,7 @@
           </div>
 
           <div class="col">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmwbwQT1WKnZ9df5WFMmyacs9bMtu_U444fOdEqCDzNOMh7ZhFHHGed5RYYSumFI6Y0RM&usqp=CAU" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -160,6 +160,26 @@
       </div>
       
       <!-- CARDS ENDS -->
+<!-- divisor -->
+<div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-4 bg-primary ">
+        <h3>mira el sig vid </h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore, nesciunt?</p>
+      </div>
+      <div class="col-sm-12 col-md-4 bg-danger" >
+        <h3>mira el sig vid </h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore, nesciunt?</p>
+      </div>
+      <div class="col-sm-12 col-md-4 bg-secondary">
+        <h3>mira el sig vid </h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore, nesciunt?</p> </div>
+    </div>
+  </div>
+
+</div>
+</div>
 
 
     
