--- a/live-coding-1-main/index.html
+++ b/live-coding-1-main/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Palabras</title>
 </head>
 <body>
-    
+    <h1>Lista de palabras</h1>
+    <ul>
+        <!-- imprime los elementos de la lista  -->
+    </ul>
+
+    <script src="/app.js"></script>
 </body>
 </html>
